Added api routes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node dbs/mongo/index-mongo.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "jest": "^27.0.6"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "mongoose": "^5.13.2"
   }
 }
