--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node dbs/mongo/index-mongo.js"
+    "start": "node dbs/mongo/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,9 @@
     "jest": "^27.0.6"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "express": "^4.17.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "nodemon": "^2.0.12"
   }
 }
