Added tests for adding questions and answers

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest --coverage",
     "start": "node dbs/mongo/index.js"
   },
   "repository": {
