--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bluebird": "^3.5.1",
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
+    "mongoose-paginate-v2": "^1.4.1",
     "nodemon": "^2.0.12"
   }
 }
