--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
     "mongoose-paginate-v2": "^1.4.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "redis": "^3.1.2"
   }
 }
